--- a/Instaglam/Base.lproj/Main.storyboard
+++ b/Instaglam/Base.lproj/Main.storyboard
@@ -87,14 +87,124 @@
                     <view key="view" contentMode="scaleToFill" id="VIE-UK-MM1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uyf-PZ-hf9">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="445" id="DMt-ia-Vfc" customClass="PostCell" customModule="Instaglam" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="445"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DMt-ia-Vfc" id="ULk-1D-fQc">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="445"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h9u-UK-Svd">
+                                                    <rect key="frame" x="8" y="8" width="398" height="400"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="h9u-UK-Svd" secondAttribute="height" multiplier="199:200" id="ZP9-Oa-sj4"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GYt-2X-Jml">
+                                                    <rect key="frame" x="8" y="416" width="38" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Wow, I love turtles!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q78-At-aLS">
+                                                    <rect key="frame" x="54" y="416" width="352" height="20.333333333333314"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="h9u-UK-Svd" firstAttribute="leading" secondItem="ULk-1D-fQc" secondAttribute="leading" constant="8" id="ECq-W3-dUR"/>
+                                                <constraint firstAttribute="trailing" secondItem="q78-At-aLS" secondAttribute="trailing" constant="8" id="Emp-HE-OPY"/>
+                                                <constraint firstItem="GYt-2X-Jml" firstAttribute="leading" secondItem="ULk-1D-fQc" secondAttribute="leading" constant="8" id="QOz-8q-Hmd"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="q78-At-aLS" secondAttribute="bottom" constant="8" id="QlQ-Wa-J6N"/>
+                                                <constraint firstItem="h9u-UK-Svd" firstAttribute="top" secondItem="ULk-1D-fQc" secondAttribute="top" constant="8" id="e31-F0-F9Z"/>
+                                                <constraint firstAttribute="trailing" secondItem="h9u-UK-Svd" secondAttribute="trailing" constant="8" id="g7z-k3-rDg"/>
+                                                <constraint firstItem="GYt-2X-Jml" firstAttribute="top" secondItem="h9u-UK-Svd" secondAttribute="bottom" constant="8" id="i8w-cE-EG3"/>
+                                                <constraint firstItem="q78-At-aLS" firstAttribute="top" secondItem="h9u-UK-Svd" secondAttribute="bottom" constant="8" id="jXK-el-QMg"/>
+                                                <constraint firstItem="q78-At-aLS" firstAttribute="leading" secondItem="GYt-2X-Jml" secondAttribute="trailing" constant="8" id="kRx-Xz-Dip"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="captionLabel" destination="q78-At-aLS" id="s5Y-xi-aFz"/>
+                                            <outlet property="photoView" destination="h9u-UK-Svd" id="wIZ-5F-28F"/>
+                                            <outlet property="usernameLabel" destination="GYt-2X-Jml" id="zCM-oI-BKO"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="GjL-0X-WOw"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="xNn-vd-upG"/>
+                    <navigationItem key="navigationItem" id="xNn-vd-upG">
+                        <barButtonItem key="rightBarButtonItem" title="+" image="insta_camera_btn" id="6KD-jY-ob4">
+                            <connections>
+                                <segue destination="DLK-el-Iq2" kind="presentation" id="giU-nP-7Af"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="uyf-PZ-hf9" id="bjx-W3-Msh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hwg-XV-Anu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1429" y="103"/>
+            <point key="canvasLocation" x="1428.985507246377" y="102.71739130434783"/>
+        </scene>
+        <!--Camera View Controller-->
+        <scene sceneID="5pa-Qy-Jfq">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="DLK-el-Iq2" customClass="CameraViewController" customModule="Instaglam" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VIr-Xn-7UC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="image_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="5Bk-uy-ONM">
+                                <rect key="frame" x="20" y="20" width="374" height="314"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="tIU-o8-k7i" appends="YES" id="ZCI-ja-n9l"/>
+                                </connections>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6H7-8j-qh4">
+                                <rect key="frame" x="20" y="342" width="374" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U0v-W0-ejG">
+                                <rect key="frame" x="20" y="384" width="374" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Submit"/>
+                                <connections>
+                                    <action selector="onSubmitButton:" destination="DLK-el-Iq2" eventType="touchUpInside" id="R1j-Lh-YyG"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="9i1-ox-lLa"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <connections>
+                        <outlet property="commentField" destination="6H7-8j-qh4" id="3T2-6Y-mER"/>
+                        <outlet property="imageView" destination="5Bk-uy-ONM" id="m9X-RN-sAJ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KEm-2E-JAv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="tIU-o8-k7i">
+                    <connections>
+                        <action selector="onCameraButton:" destination="DLK-el-Iq2" id="EkE-np-1Pp"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="2237.68115942029" y="102.71739130434783"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="WBg-xG-RQk">
@@ -116,6 +226,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="image_placeholder" width="375" height="375"/>
+        <image name="insta_camera_btn" width="25" height="25"/>
         <image name="instagram_logo" width="255" height="108"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
